--- a/SR_Prototype_V3/Config/DefaultEngine.ini
+++ b/SR_Prototype_V3/Config/DefaultEngine.ini
@@ -8,8 +8,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/Ruleset/ScanReach_GM.ScanReach_GM_C
-EditorStartupMap=/Game/ScanReach.ScanReach
-GameDefaultMap=/Game/ScanReach.ScanReach
+EditorStartupMap=/Game/Blueprints/OnePictureTest.OnePictureTest
+GameDefaultMap=/Game/Blueprints/OnePictureTest.OnePictureTest
 
 [/Script/Engine.RendererSettings]
 r.TextureStreaming=False
@@ -53,4 +53,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
