Changed Options button size

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@WINDOWS-EUOFFC3
 LastExecutedLaunchName=WINDOWS-EUOFFC3
-NewWindowPosition=(X=315,Y=148)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -79,11 +79,6 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Deck.bp_Deck
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
-OpenAssetsAtExit=/Game/Blueprints/Camera/bp_DeckCamera.bp_deckCamera
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Sensor.bp_Sensor
-OpenAssetsAtExit=/Game/Blueprints/Websocket/Websocket_Master.Websocket_Master
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1025,7 +1020,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Textures/UI/DarkMode_V3
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1052,7 +1047,7 @@ ContentBrowserTab2.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=51.000 Y=589.000
-WindowSize=X=1690.000 Y=1050.000
+WindowSize=X=1700.000 Y=1040.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1069,7 +1064,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content
+UNR=C:/Users/Magnus/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content
 BRUSH=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 FBX=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 FBXAnim=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
@@ -1699,19 +1694,19 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C="\"Object.Deck.Decks\" \"Object.Deck.Decks.Decks_3_D027BBC1475B68960105F5BAC0C0563E\" "
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
-Widget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
