--- a/SR_Prototype_V3/Saved/Config/Windows/Engine.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/Engine.ini
@@ -5,6 +5,7 @@ Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Runtime/GearVR/Content
 Paths=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Plugins/WebSocket/Content
 Paths=C:/Users/Magnus/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Plugins/WebSocket/Content
+Paths=C:/Users/Vegard/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Plugins/WebSocket/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
