--- a/SR_Prototype_V3/Config/DefaultEngine.ini
+++ b/SR_Prototype_V3/Config/DefaultEngine.ini
@@ -14,6 +14,7 @@ GameDefaultMap=/Game/ScanReach.ScanReach
 [/Script/Engine.RendererSettings]
 r.TextureStreaming=False
 r.DefaultFeature.AutoExposure=False
+r.TranslucentSortPolicy=2
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
