Camrea change - 3 decks at a time in order

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,9 +83,6 @@ LastLevel=/Game/ScanReach
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
 OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1031,7 +1028,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1058,7 +1055,7 @@ ContentBrowserTab2.CurrentViewType=1
 
 [RootWindow]
 ScreenPosition=X=8.000 Y=491.000
-WindowSize=X=1810.000 Y=1050.000
+WindowSize=X=1820.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1695,6 +1692,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Ve
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/M_Staircases.M_Staircases;
 RecentlyPlaced=/Game/Materials/M_MusterStation.M_MusterStation;
 RecentlyPlaced=/Game/Meshes/MusterStationPlane.MusterStationPlane;
@@ -1708,24 +1706,24 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C=
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-w_DeckButton_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+w_DeckButton_C=
+UserWidget=
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_deckViewBox_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 w_DeckOverview_C="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
@@ -1853,7 +1851,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=PIE
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
